swagger.yml updated
